--- a/Data_Manipulation.html
+++ b/Data_Manipulation.html
@@ -526,6 +526,46 @@ pups_data = read_csv(file = &quot;./data/FAS_pups.csv&quot;)</code></pre>
 ## 10 Con7  #1/5/3/83/3-…       NA          NA            20               9
 ## # ... with 39 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
 ## #   pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>litters_data_raw = read_csv(&quot;./data/FAS_litters.csv&quot;,
+  col_types = &quot;ccddiiii&quot;)
+litters_data_clean_names = janitor::clean_names(litters_data_raw)
+litters_data_selected_cols = select(litters_data_clean_names, -pups_survive)
+litters_data_with_vars = mutate(litters_data_selected_cols, 
+  wt_gain = gd18_weight - gd0_weight,
+  group = tolower(group))</code></pre>
+<p>Use piping</p>
+<pre class="r"><code>read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;%
+  janitor::clean_names() %&gt;%
+  select(-pups_survive) %&gt;%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group))%&gt;%
+filter(!is.na(gd0_weight))</code></pre>
+<pre><code>## # A tibble: 34 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 con7  #85                 19.7        34.7          20               3
+##  2 con7  #1/2/95/2           27          42            19               8
+##  3 con7  #5/5/3/83/3-3       26          41.4          19               6
+##  4 con7  #5/4/2/95/2         28.5        44.1          19               5
+##  5 con8  #3/5/2/2/95         28.5        NA            20               8
+##  6 con8  #5/4/3/83/3         28          NA            19               9
+##  7 mod7  #59                 17          33.4          19               8
+##  8 mod7  #103                21.4        42.1          19               9
+##  9 mod7  #3/82/3-2           28          45.9          20               5
+## 10 mod7  #4/2/95/2           23.5        NA            19               9
+## # ... with 24 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
+## #   wt_gain &lt;dbl&gt;</code></pre>
+<p>Illustrate placeholder use with ‘lm’</p>
+<pre class="r"><code>litters_data = 
+  read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;%
+  janitor::clean_names() %&gt;%
+  select(-pups_survive) %&gt;%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group)) %&gt;%
+  filter(!is.na(gd0_weight)) %&gt;%
+  lm(gd18_weight ~ gd0_weight, data = .)</code></pre>
 </div>
 </div>
 
