--- a/Data_Manipulation.html
+++ b/Data_Manipulation.html
@@ -158,7 +158,7 @@ pups_data = read_csv(file = &quot;./data/FAS_pups.csv&quot;)</code></pre>
 </div>
 <div id="select-variables" class="section level1">
 <h1>Select variables</h1>
-<pre class="r"><code>select(litters_data,group, litter_number, gd0_weight)</code></pre>
+<pre class="r"><code>select(litters_data, group, litter_number, gd0_weight)</code></pre>
 <pre><code>## # A tibble: 49 x 3
 ##    group litter_number   gd0_weight
 ##    &lt;chr&gt; &lt;chr&gt;                &lt;dbl&gt;
@@ -235,6 +235,7 @@ pups_data = read_csv(file = &quot;./data/FAS_pups.csv&quot;)</code></pre>
 ##  9 Con8        NA          NA            20               8               0
 ## 10 Con8        28.5        NA            20               8               0
 ## # ... with 39 more rows, and 1 more variable: pups_survive &lt;int&gt;</code></pre>
+<p>Renaming variables</p>
 <pre class="r"><code>select(litters_data, group, litter_number, gest_day_0_weight = gd0_weight)</code></pre>
 <pre><code>## # A tibble: 49 x 3
 ##    group litter_number   gest_day_0_weight
@@ -313,7 +314,7 @@ pups_data = read_csv(file = &quot;./data/FAS_pups.csv&quot;)</code></pre>
 ## 10 #3/5/2/2/95   Con8        28.5        NA            20               8
 ## # ... with 39 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
 ## #   pups_survive &lt;int&gt;</code></pre>
-<p>Learning Assessment</p>
+<p>Learning Assessment 1</p>
 <pre class="r"><code>select(pups_data, litter_number, sex, pd_ears)</code></pre>
 <pre><code>## # A tibble: 313 x 3
 ##    litter_number   sex pd_ears
@@ -490,6 +491,26 @@ pups_data = read_csv(file = &quot;./data/FAS_pups.csv&quot;)</code></pre>
 ## 10 Con8  #3/5/2/2/95         28.5        NA            20               8
 ## # ... with 39 more rows, and 4 more variables: pups_dead_birth &lt;int&gt;,
 ## #   pups_survive &lt;int&gt;, wt_gain &lt;dbl&gt;, wt_gain_squared &lt;dbl&gt;</code></pre>
+<p>Learning Assessment 2</p>
+<pre class="r"><code>mutate(pups_data, 
+        pivot_minus7 = pd_pivot - 7,
+        pd_sum = pd_ears + pd_eyes + pd_pivot 
+                + pd_walk
+)</code></pre>
+<pre><code>## # A tibble: 313 x 8
+##    litter_number   sex pd_ears pd_eyes pd_pivot pd_walk pivot_minus7 pd_sum
+##    &lt;chr&gt;         &lt;int&gt;   &lt;int&gt;   &lt;int&gt;    &lt;int&gt;   &lt;int&gt;        &lt;dbl&gt;  &lt;int&gt;
+##  1 #85               1       4      13        7      11            0     35
+##  2 #85               1       4      13        7      12            0     36
+##  3 #1/2/95/2         1       5      13        7       9            0     34
+##  4 #1/2/95/2         1       5      13        8      10            1     36
+##  5 #5/5/3/83/3-3     1       5      13        8      10            1     36
+##  6 #5/5/3/83/3-3     1       5      14        6       9           -1     34
+##  7 #5/4/2/95/2       1      NA      14        5       9           -2     NA
+##  8 #4/2/95/3-3       1       4      13        6       8           -1     31
+##  9 #4/2/95/3-3       1       4      13        7       9            0     33
+## 10 #2/2/95/3-2       1       4      NA        8      10            1     NA
+## # ... with 303 more rows</code></pre>
 </div>
 <div id="arrange" class="section level2">
 <h2>Arrange</h2>
@@ -526,6 +547,23 @@ pups_data = read_csv(file = &quot;./data/FAS_pups.csv&quot;)</code></pre>
 ## 10 Con7  #1/5/3/83/3-…       NA          NA            20               9
 ## # ... with 39 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
 ## #   pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>head(arrange(litters_data, group, pups_born_alive), 10)</code></pre>
+<pre><code>## # A tibble: 10 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #85                 19.7        34.7          20               3
+##  2 Con7  #5/4/2/95/2         28.5        44.1          19               5
+##  3 Con7  #5/5/3/83/3-3       26          41.4          19               6
+##  4 Con7  #4/2/95/3-3         NA          NA            20               6
+##  5 Con7  #2/2/95/3-2         NA          NA            20               6
+##  6 Con7  #1/2/95/2           27          42            19               8
+##  7 Con7  #1/5/3/83/3-…       NA          NA            20               9
+##  8 Con8  #2/2/95/2           NA          NA            19               5
+##  9 Con8  #1/6/2/2/95-2       NA          NA            20               7
+## 10 Con8  #3/6/2/2/95-3       NA          NA            20               7
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<p>Multi step Data Manipulation</p>
+<p>Defining Intermediate Datasets</p>
 <pre class="r"><code>litters_data_raw = read_csv(&quot;./data/FAS_litters.csv&quot;,
   col_types = &quot;ccddiiii&quot;)
 litters_data_clean_names = janitor::clean_names(litters_data_raw)
@@ -533,29 +571,15 @@ litters_data_selected_cols = select(litters_data_clean_names, -pups_survive)
 litters_data_with_vars = mutate(litters_data_selected_cols, 
   wt_gain = gd18_weight - gd0_weight,
   group = tolower(group))</code></pre>
-<p>Use piping</p>
-<pre class="r"><code>read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;%
+<p>Another option can be using nested function calls, which is also confusing.</p>
+<p>A better way is to use piping</p>
+<pre class="r"><code>litters_data = 
+  read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;%
   janitor::clean_names() %&gt;%
   select(-pups_survive) %&gt;%
   mutate(
     wt_gain = gd18_weight - gd0_weight,
-    group = tolower(group))%&gt;%
-filter(!is.na(gd0_weight))</code></pre>
-<pre><code>## # A tibble: 34 x 8
-##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
-##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
-##  1 con7  #85                 19.7        34.7          20               3
-##  2 con7  #1/2/95/2           27          42            19               8
-##  3 con7  #5/5/3/83/3-3       26          41.4          19               6
-##  4 con7  #5/4/2/95/2         28.5        44.1          19               5
-##  5 con8  #3/5/2/2/95         28.5        NA            20               8
-##  6 con8  #5/4/3/83/3         28          NA            19               9
-##  7 mod7  #59                 17          33.4          19               8
-##  8 mod7  #103                21.4        42.1          19               9
-##  9 mod7  #3/82/3-2           28          45.9          20               5
-## 10 mod7  #4/2/95/2           23.5        NA            19               9
-## # ... with 24 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
-## #   wt_gain &lt;dbl&gt;</code></pre>
+    group = tolower(group))</code></pre>
 <p>Illustrate placeholder use with ‘lm’</p>
 <pre class="r"><code>litters_data = 
   read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;%
@@ -565,7 +589,15 @@ filter(!is.na(gd0_weight))</code></pre>
     wt_gain = gd18_weight - gd0_weight,
     group = tolower(group)) %&gt;%
   filter(!is.na(gd0_weight)) %&gt;%
-  lm(gd18_weight ~ gd0_weight, data = .)</code></pre>
+  lm(gd18_weight ~ gd0_weight, data = .) %&gt;% 
+  broom::tidy()</code></pre>
+<p>Learning Assessment 3</p>
+<pre class="r"><code>pups_data = 
+  read_csv(file = &quot;./data/FAS_pups.csv&quot;, col_types = &quot;ciiiii&quot;) %&gt;%            
+  janitor::clean_names() %&gt;%
+  filter(sex == 1) %&gt;% 
+  select(-pd_ears) %&gt;% 
+  mutate(pd_pivotgt7 = pd_pivot &gt;= 7)</code></pre>
 </div>
 </div>
 
